--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "boxicons": "^2.1.4",
     "parcel": "^2.7.0",
     "resetcss": "^1.0.3",
-    "sass": "^1.55.0"
+    "sass": "^1.55.0",
+    "swiper": "^8.4.3"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.7.0"
